# carelumi-site

./: CNAME  README.md  index.html  styles.css
backend/: .env  MANIFEST.in  README.md  database.db  ec2-54-89-173-249.compute-1.amazonaws.com  pyproject.toml  setup.py
backend/src/: database.py  llm_placeholder.py  main.py  schema.py  syncS3.py  triggerEC2.py
backend/src/backend_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/commands/: __init__.py  command.py
